--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
     "permissions": ["storage"],
     "options_ui": {
         "page": "opt.html",
-        "open_in_tab": false
+        "open_in_tab": true
 
     },
     "content_security_policy": "script-src 'self' https://apis.google.com; object-src 'self'",
