--- a/manifest.json
+++ b/manifest.json
@@ -15,10 +15,11 @@
     },
     "content_security_policy": "script-src 'self' https://apis.google.com; object-src 'self'",
     "manifest_version": 2,
-
     "browser_action": {
         "default_title": "Click here to open menu",
         "default_popup": "opt.html"
+    },
+    "icons": {
+        "96": "images/ico96png"
     }
-
 }
