--- a/manifest.json
+++ b/manifest.json
@@ -20,6 +20,6 @@
         "default_popup": "opt.html"
     },
     "icons": {
-        "96": "images/ico96png"
+        "96": "images/ico96.ico"
     }
 }
