--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,9 @@
     "name": "Censor Content",
     "version": "1.0",
     "description": "Censor unwanted content on this page",
+    "icons": {
+        "128": "images/ico_128.png"
+    },
     "content_scripts": [{
         "matches": ["<all_urls>"],
         "js": ["cc-app.js"],
@@ -18,8 +21,5 @@
     "browser_action": {
         "default_title": "Click here to open menu",
         "default_popup": "opt.html"
-    },
-    "icons": {
-        "96": "images/ico96.ico"
     }
 }
