--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 {
     "name": "Censor Content",
-    "version": "1.0",
-    "description": "Censor unwanted content on this page",
+    "version": "1.1",
+    "description": "Censor unwanted content on this page (emil)",
     "icons": {
         "128": "images/ico_128.png"
     },
     "content_scripts": [{
-        "matches": ["<all_urls>"],
+        "matches": ["https://*/*", "http://*/*"],
         "js": ["cc-app.js"],
         "style": ["style.css"]
     }],
